# Tg_Bot_GetID

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py
AIOGRam/: .gitignore  Dockerfile  README.MD  bot.py  bot_config.ini  docker-compose.yaml  env  pyproject.toml  requirements.txt
Aiotg/: bot.py
Bash/: README.MD  telegram_bot.sh
C#/: BotProgram.cs  README.MD
Cpp/: README.MD  telegram_bot.cpp
GO/: README.MD  main.go
JAVA/: bot.java
JavaScript/: README.MD  bot.js
Kotlin/: MyTelegramBot.kt  README.MD
Lua/: README.MD  telegram_bot.lua
PHP/: README.MD  bot.php
Pyrogram/: bot.py
R/: README.MD  telegramBot.R
Ruby/: README.MD  telegram_bot.rb
Telepot/: app.py
TypeScript/: README.MD  package.json  telegram_bot.ts
pyTelegramBotAPI/: app.py
python-telegram-bot/: main.py
telethon/: bot.py
